--- a/app/views/layouts/board.html.erb
+++ b/app/views/layouts/board.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Task</title>
+  <title>Fate Task</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<header>
+	<%= render partial: "brand" %>
+</header>
+
+<main>
+	<%= yield %>
+</main>
+
+<footer>
+	Footer
+</footer>
 
 </body>
 </html>
