Look at the perdy colors.

--- a/app/views/layouts/board.html.erb
+++ b/app/views/layouts/board.html.erb
@@ -10,6 +10,7 @@
 
 <header>
 	<%= render partial: "brand" %>
+	<div id="subtitle"><%= yield :subtitle %></div>
 </header>
 
 <main>
@@ -17,7 +18,14 @@
 </main>
 
 <footer>
-	Footer
+	<div id="copyright"><strong>&copy;</strong> Copyright Lee Miller <%= Time.now.year %></div>
+	<div id="footer-links">
+		<a href="http://blog.iarke.us"><i class="icon-sign-blank"></i></a>
+		<a href="https://twitter.com/#!/arkeus"><i class="icon-twitter-sign"></i></a>
+		<a href="https://github.com/arkeus"><i class="icon-github-sign"></i></a>
+		<a href="https://www.facebook.com/arkeus"><i class="icon-facebook-sign"></i></a>
+		<a href="https://plus.google.com/118186154411847048977/about"><i class="icon-google-plus-sign"></i></a>
+	</div>
 </footer>
 
 </body>
