--- a/app/assets/stylesheets/board.css.scss
+++ b/app/assets/stylesheets/board.css.scss
@@ -1,3 +1,91 @@
-// Place all the styles related to the board controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(http://fonts.googleapis.com/css?family=Telex);
+@import "utils";
+
+header, main, footer {
+	width: 890px;
+	margin: 0 auto;
+	font-family: "Verdana", "sans-serif";
+}
+
+header {
+	@include clearfix;
+	position: relative;
+	margin-bottom: 10px;
+	
+	#brand {
+		font-family: "Telex", sans-serif;
+		font-weight: bold;
+		font-size: 36px;
+		float: left;
+		
+		em {
+			font-style: normal;
+		}
+		
+		.subdomain {
+			em:nth-child(1) { color: #ff009c; }
+			em:nth-child(2) { color: #ff0030; }
+			em:nth-child(3) { color: #ff2400; }
+			em:nth-child(4) { color: #ff6600; }
+		}
+		
+		.domain {
+			em:nth-child(1) { color: #9cff00; }
+			em:nth-child(2) { color: #60ff00; }
+			em:nth-child(3) { color: #00ff0c; }
+			em:nth-child(4) { color: #00ff84; }
+		}
+		
+		.tld {
+			em:nth-child(1) { color: #00c0ff; }
+			em:nth-child(2) { color: #007eff; }
+		}
+		
+		.separator {
+			color: #888;
+		}
+	}
+	
+	#subtitle {
+		font-family: "Telex", sans-serif;
+		font-weight: bold;
+		font-size: 18px;
+		float: right;
+		color: #aaa;
+		position: absolute;
+		bottom: 0;
+		right: 0;
+	}
+}
+
+main {
+	
+}
+
+footer {
+	@include clearfix;
+	margin-top: 10px;
+	
+	#copyright {
+		float: left;
+		color: #ccc;
+		font-weight: bold;
+		font-size: 16px;
+		font-family: "Telex", sans-serif;
+	}
+	
+	#footer-links {
+		float: right;
+		font-size: 20px;
+		
+		a:nth-child(1) { color: #ff009c; }
+		a:nth-child(2) { color: #ff6600; }
+		a:nth-child(3) { color: #9cff00; }
+		a:nth-child(4) { color: #00ff84; }
+		a:nth-child(5) { color: #007eff; }
+	}
+}
+
+a {
+	text-decoration: none;
+}
