--- a/app/views/layouts/board.html.erb
+++ b/app/views/layouts/board.html.erb
@@ -18,7 +18,7 @@
 </main>
 
 <footer>
-	<div id="copyright"><strong>&copy;</strong> Copyright Lee Miller <%= Time.now.year %></div>
+	<div id="copyright">&copy; Copyright Lee Miller <%= Time.now.year %></div>
 	<div id="footer-links">
 		<a href="http://blog.iarke.us"><i class="icon-sign-blank"></i></a>
 		<a href="https://twitter.com/#!/arkeus"><i class="icon-twitter-sign"></i></a>
