--- a/app/assets/stylesheets/_utils.css.scss
+++ b/app/assets/stylesheets/_utils.css.scss
@@ -30,3 +30,26 @@
 .unselectable {
 	@include unselectable;
 }
+
+// Buttons
+@mixin button {
+	display: inline-block;
+	padding: 4px 8px;
+	background: #fafafa;
+	border-radius: 3px;
+	border: {
+		top: 1px solid #eee;
+		left: 1px solid #eee;
+		right: 1px solid #ccc;
+		bottom: 1px solid #ccc;
+	}
+	box-shadow: inset 0 -1px #ccc, inset 0 1px #fff;
+	font-weight: bold;
+	cursor: pointer;
+	vertical-align: top;
+	
+	&:active {
+		box-shadow: inset 0 1px #f6f6f6;
+		padding: 5px 8px 3px 8px;
+	}
+}
