--- a/app/views/layouts/boards.html.erb
+++ b/app/views/layouts/boards.html.erb
@@ -20,11 +20,11 @@
 <footer>
 	<div id="copyright">&copy; Copyright Lee Miller <%= Time.now.year %></div>
 	<div id="footer-links">
-		<a href="http://blog.iarke.us"><i class="icon-sign-blank"></i></a>
-		<a href="https://twitter.com/#!/arkeus"><i class="icon-twitter-sign"></i></a>
-		<a href="https://github.com/arkeus"><i class="icon-github-sign"></i></a>
-		<a href="https://www.facebook.com/arkeus"><i class="icon-facebook-sign"></i></a>
-		<a href="https://plus.google.com/118186154411847048977/about"><i class="icon-google-plus-sign"></i></a>
+		<a href="http://blog.iarke.us"><%= fa_icon "square" %></a>
+		<a href="https://twitter.com/#!/arkeus"><%= fa_icon "twitter-square" %></a>
+		<a href="https://github.com/arkeus"><%= fa_icon "github-square" %></a>
+		<a href="https://www.facebook.com/arkeus"><%= fa_icon "facebook-square" %></a>
+		<a href="https://plus.google.com/118186154411847048977/about"><%= fa_icon "google-plus-square" %></a>
 	</div>
 </footer>
 
