--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -10,6 +10,8 @@ $column-width: 8.33%;
 	padding: 0;
 	
 	[class*="col-"] {
+		@include border-box;
+		
 		float: left;
 		padding: 0;
 		margin: 0;
