Markup the copy.

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -4,19 +4,19 @@
 
 <section id="promotion" class="grid">
 	<div class="promotion-column col-4 align-center">
-		Online
+		<span class="title">Online</span>
 		<%= fa_icon "cloud" %>
-		Fate Task lives online, so you can access it from any computer, anywhere.
+		<div class="blurb">Fate Task lives online, so you can access it from any computer, anywhere.</div>
 	</div>
 	<div class="promotion-column col-4 align-center">
-		Easy
+		<span class="title">Easy</span>
 		<%= fa_icon "check" %>
-		Creating and managing tasks are as simple as possible.
+		<div class="blurb">Creating and managing tasks are as simple as possible.</div>
 	</div>
 	<div class="promotion-column col-4 align-center">
-		Quick
+		<span class="title">Quick</span>
 		<%= fa_icon "bolt" %>
-		It's probably not quick and doesn't sync but don't tell anyone, shhhhhh.
+		<div class="blurb">It's probably not quick and doesn't sync but don't tell anyone, shhhhhh.</div>
 	</div>
 </section>
 
