Load boards. Home page forms. More color use.

--- a/app/assets/stylesheets/_utils.css.scss
+++ b/app/assets/stylesheets/_utils.css.scss
@@ -76,3 +76,17 @@ $blue-1: #00c0ff;
 $blue-2: #007eff;
 $blue-3: #ff009c;
 $blue-4: #ff009c;
+
+// Color helper classes
+.red-1 { color: $red-1; }
+.red-2 { color: $red-2; }
+.red-3 { color: $red-3; }
+.red-4 { color: $red-4; }
+
+.green-1 { color: $green-1; }
+.green-2 { color: $green-2; }
+.green-3 { color: $green-3; }
+.green-4 { color: $green-4; }
+
+.blue-1 { color: $blue-1; }
+.blue-2 { color: $blue-2; }
