--- a/app/assets/stylesheets/_utils.css.scss
+++ b/app/assets/stylesheets/_utils.css.scss
@@ -77,6 +77,8 @@ $blue-2: #007eff;
 $blue-3: #ff009c;
 $blue-4: #ff009c;
 
+$gray-1: #aaa;
+
 // Color helper classes
 .red-1 { color: $red-1; }
 .red-2 { color: $red-2; }
@@ -90,3 +92,5 @@ $blue-4: #ff009c;
 
 .blue-1 { color: $blue-1; }
 .blue-2 { color: $blue-2; }
+
+.gray-1 { color: $gray-1; }
