--- a/app/assets/stylesheets/board.css.scss
+++ b/app/assets/stylesheets/board.css.scss
@@ -98,20 +98,32 @@ footer {
 	}
 }
 
+section#pitch {
+	margin-bottom: 12px;
+	font-size: 19px;
+	text-align: center;
+}
+
 section#promotion, section#action {
 	.promotion-column {
-		padding: 0 20px;
+		padding: 0 10px;
 	}
 		
 	.title {
+		@include clearfix;
 		font-family: "Telex", sans-serif;
 		font-weight: bold;
-		font-size: 24px;
-	}
-	
-	.fa {
-		display: block;
-		font-size: 64px;
+		font-size: 18px;
+		
+		.fa {
+			display: block;
+			font-size: 24px;
+			float: right;
+		}
+		
+		span {
+			float: left;
+		}
 	}
 	
 	.blurb {
@@ -121,9 +133,17 @@ section#promotion, section#action {
 	
 	form {
 		margin-top: 8px;
+		
+		input[type="text"] {
+			width: 130px;
+		}
+		
+		input[type="submit"] {
+			width: 70px;
+		}
 	}
 }
 
 section#action {
-	margin-top: 24px;
+	margin-top: 12px;
 }
