--- a/app/assets/stylesheets/_utils.css.scss
+++ b/app/assets/stylesheets/_utils.css.scss
@@ -24,6 +24,7 @@
   -webkit-user-select: none;
   -o-user-select: none;
   user-select: none;
+  cursor: default;
 }
 
 // Helper class for unselectable
@@ -60,6 +61,9 @@
 		padding: 5px 8px 3px 8px;
 	}
 }
+
+// Attributes
+$width: 890px;
 
 // Colors
 $red-1: #ff009c;
