Map files, initial schedule route shit. Might make it more restful...

--- a/app/views/layouts/boards.html.erb
+++ b/app/views/layouts/boards.html.erb
@@ -13,7 +13,7 @@
 	<div id="subtitle"><%= yield :subtitle %></div>
 </header>
 
-<main ng-app="task">
+<main ng-app="task" ng-controller="BoardController">
 	<%= yield %>
 </main>
 
