--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,23 +1,31 @@
 <% content_for :subtitle, @board.name %>
 
-show
+<div ng-show="loading">Loading</div>
+<div ng-repeat="schedule in schedules">
+	schedule<br>
+</div>
 
-<div id="new-schedule" class="modal" ng-controller="ModalController"><div>
-	<div class="header">Create A New Schedule</div>
+<div id="new-schedule" class="modal" ng-controller="ScheduleModalController"><div>
+	<div class="header">{{title}}</div>
 	<div class="content">
 		<%= form_tag nil, id: "schedule-form" do %>
-			<%= text_field_tag :name, nil, placeholder: "Name", class: "row", "ng-model" => "schedule.name" %>
-			<%= select_tag :type, options_for_select(["Daily", "Weekly"]), class: "row", "ng-model" => "schedule.type" %>
-			<div class="row" id="day-of-week-select">
-				<% days_of_week_abbr.each do |day| %>
-					<div class="day"><%= check_box_tag :day, day, true %> <%= day %></div>
+			<%= text_field_tag :name, nil, placeholder: "Name", class: "row", autocomplete: "off", "ng-model" => "schedule.name" %>
+			<%= select_tag :type, options_for_select(["Daily", "Weekly"].map { |type| [type, type.downcase] }), class: "row", "ng-model" => "schedule.type" %>
+			<div class="row" id="day-of-week-select" ng-show="schedule.type == 'daily'">
+				<% days_of_week_abbr.each do |day, day_abbr| %>
+					<div class="day"><%= check_box_tag :day, day_abbr, true, "ng-checked" => "schedule.daily_days.indexOf('#{day}') > -1", "ng-click" => "toggleDay('#{day}')" %> <%= day_abbr %></div>
 				<% end %>
 			</div>
-			<%= select_tag :start_of_week, grouped_options_for_select(start_of_week_options), class: "row" %>
+			<%= select_tag :start_of_week, grouped_options_for_select(start_of_week_options), class: "row", "ng-show" => "schedule.type == 'weekly'", "ng-model" => "schedule.weekly_start" %>
 		<% end %>
 	</div>
 	<div class="footer align-center">
-		<a class="button" ng-click="create()">Create</a>
+		<a class="button" ng-click="create()" ng-class="{ disabled: isCreateDisabled() }">{{action}}</a>
 		<a class="button" ng-click="cancel">Cancel</a>
 	</div>
 </div></div>
+
+<script>
+	var BOARD_ID = <%= @board.id %>;
+	var BOARD_NAME = "<%= @board.name %>";
+</script>
