Styling and display for schedules.

--- a/app/assets/stylesheets/_utils.css.scss
+++ b/app/assets/stylesheets/_utils.css.scss
@@ -53,12 +53,22 @@
 	}
 	box-shadow: inset 0 -1px #ccc, inset 0 1px #fff;
 	font-weight: bold;
-	cursor: pointer;
+	cursor: pointer !important;
 	vertical-align: top;
 	
 	&:active {
 		box-shadow: inset 0 1px #f6f6f6;
 		padding: 5px 8px 3px 8px;
+	}
+	
+	&.small {
+		padding: 3px 6px;
+		font-size: 12px;
+	}
+	
+	&.tiny {
+		padding: 2px 4px;
+		font-size: 10px;
 	}
 }
 
