--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,31 +1,60 @@
 <% content_for :subtitle, @board.name %>
+<% content_for :ng_controller, "BoardController" %>
+
+<div class="error" ng-show="error != null">{{error}}</div>
 
 <div ng-show="loading">Loading</div>
-<div ng-repeat="schedule in schedules">
-	schedule<br>
+<div ng-show="!loading && schedules.length == 0" id="no-schedules">
+	You have no schedules. Create one by clicking the button below.
 </div>
+<table border=0 ng-repeat="schedule in schedules" class="schedule {{schedule.schedule_type}}" ng-controller="ScheduleController">
+	<thead>
+		<tr>
+			<th class="schedule-name">{{schedule.name}}</th>
+			<th ng-repeat="point in schedule.points" class="point-header">{{point.display}}</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="task in schedule.tasks">
+			<td>{{task.name}}</td>
+			<td ng-repeat="point in schedule.points">
+				a
+			</td>
+		</tr>
+		<tr ng-show="schedule.tasks.length < 1">
+			<td>This schedule has no tasks</td>
+		</tr>
+		<tr>
+			<td colspan={{schedule.points.length + 1}}>
+				<a class="button tiny" ng-click="addTask(schedule.id)">Add Task</a>
+			</td>
+		</tr>
+	</tbody>
+</table>
 
-<div id="new-schedule" class="modal" ng-controller="ScheduleModalController"><div>
+<div id="new-schedule" class="modal" ng-controller="ScheduleModalController" ng-show="state == 'modal'"><div>
 	<div class="header">{{title}}</div>
 	<div class="content">
+		<div class="error" ng-show="error != null">{{error}}</div>
 		<%= form_tag nil, id: "schedule-form" do %>
 			<%= text_field_tag :name, nil, placeholder: "Name", class: "row", autocomplete: "off", "ng-model" => "schedule.name" %>
-			<%= select_tag :type, options_for_select(["Daily", "Weekly"].map { |type| [type, type.downcase] }), class: "row", "ng-model" => "schedule.type" %>
-			<div class="row" id="day-of-week-select" ng-show="schedule.type == 'daily'">
+			<%= select_tag :schedule_type, options_for_select(["Daily", "Weekly"].map { |type| [type, type.downcase] }), class: "row", "ng-model" => "schedule.schedule_type" %>
+			<div class="row" id="day-of-week-select" ng-show="schedule.schedule_type == 'daily'">
 				<% days_of_week_abbr.each do |day, day_abbr| %>
 					<div class="day"><%= check_box_tag :day, day_abbr, true, "ng-checked" => "schedule.daily_days.indexOf('#{day}') > -1", "ng-click" => "toggleDay('#{day}')" %> <%= day_abbr %></div>
 				<% end %>
 			</div>
-			<%= select_tag :start_of_week, grouped_options_for_select(start_of_week_options), class: "row", "ng-show" => "schedule.type == 'weekly'", "ng-model" => "schedule.weekly_start" %>
+			<%= select_tag :start_of_week, grouped_options_for_select(start_of_week_options), class: "row", "ng-show" => "schedule.schedule_type == 'weekly'", "ng-model" => "schedule.weekly_start" %>
 		<% end %>
 	</div>
 	<div class="footer align-center">
-		<a class="button" ng-click="create()" ng-class="{ disabled: isCreateDisabled() }">{{action}}</a>
-		<a class="button" ng-click="cancel">Cancel</a>
+		<a class="button" ng-click="createSubmit()" ng-class="{ disabled: isCreateDisabled() }">{{action}}</a>
+		<a class="button" ng-click="cancel()">Cancel</a>
 	</div>
 </div></div>
 
-<script>
-	var BOARD_ID = <%= @board.id %>;
-	var BOARD_NAME = "<%= @board.name %>";
-</script>
+<div id="actions">
+	<a class="button" ng-click="createSchedule()">Add Schedule</a>
+</div>
+
+<%= javascript_globals(board: @board) %>
