--- a/app/views/boards/_brand.html.erb
+++ b/app/views/boards/_brand.html.erb
@@ -1,7 +1,7 @@
-<div id="brand">
+<%= link_to root_path, id: "brand" do %>
 	<span class="subdomain"><em>t</em><em>a</em><em>s</em><em>k</em></span>
 	<span class="separator">.</span>
 	<span class="domain"><em>f</em><em>a</em><em>t</em><em>e</em></span>
 	<span class="separator">.</span>
 	<span class="tld"><em>i</em><em>o</em></span>
-</div>
+<% end %>
