--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -53,10 +53,21 @@ a, input[type="submit"], button[type="submit"] {
 
 .deletable {
 	@include unselectable;
+	
 	cursor: pointer;
 	color: #ddd;
-	&:hover { color: $red-2; }
-	&:active { color: $blue-2; }
+	
+	i {
+		transition: all .2s ease-in-out;
+	}
+	
+	&:hover {
+		color: $red-2;
+	}
+	
+	&:active {
+		color: $blue-2;
+	}
 }
 
 input[type="text"], input[type="password"], textarea, select {
@@ -96,3 +107,6 @@ a {
 		}
 	}
 }
+
+::selection { background: #000; color: #fff; }
+::-moz-selection { background: #000; color: #fff; }
