--- a/app/views/layouts/boards.html.erb
+++ b/app/views/layouts/boards.html.erb
@@ -18,7 +18,7 @@
 <% end %>
 
 <footer>
-	<div id="copyright">&copy; Copyright Lee Miller <%= Time.now.year %></div>
+	<div id="copyright">&copy; Lee Miller <%= Time.now.year %></div>
 	<div id="footer-links">
 		<a href="http://blog.iarke.us"><%= fa_icon "square" %></a>
 		<a href="https://twitter.com/#!/arkeus"><%= fa_icon "twitter-square" %></a>
