--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -23,7 +23,7 @@
 				<span class="clickable" ng-click="editTask($event)">{{task.name}}</span>
 				<span class="deletable" ng-click="deleteTask(task)"><%= fa_icon "times" %></span>
 			</td>
-			<td ng-repeat="point in schedule.points" class="task-point" ng-class="{ future: point.future }">
+			<td ng-repeat="point in schedule.points" class="task-point" ng-class="{ future: point.future }" ng-click="markTask()">
 				<span ng-show="task.points.indexOf(point.value) != -1" class="complete"><%= fa_icon "check" %></span>
 				<span ng-show="task.points.indexOf(point.value) == -1" class="incomplete"><%= fa_icon "times" %></span>
 			</td>
