--- a/app/assets/stylesheets/board.css.scss
+++ b/app/assets/stylesheets/board.css.scss
@@ -3,8 +3,10 @@
 
 header, main, footer {
 	@include unselectable; // Undo if it's annoying
-	width: $width;
+	max-width: $width;
+	min-width: 560px;
 	margin: 0 auto;
+	padding: 0 10px;
 	font-family: "Droid Sans", sans-serif;
 	font-size: 14px;
 }
@@ -64,7 +66,7 @@ header {
 		color: #aaa;
 		position: absolute;
 		bottom: 0;
-		right: 0;
+		right: 10px;
 	}
 }
 
