--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -13,11 +13,11 @@
 	</div>
 	<div class="promotion-column col-4 align-center">
 		<div class="title"><%= fa_icon "check", class: "green-2" %><span>Easy</span></div>
-		<div class="blurb">Creating and managing tasks are as simple as possible.</div>
+		<div class="blurb">Creating and managing tasks are as simple as possible, but no simpler.</div>
 	</div>
 	<div class="promotion-column col-4 align-center">
 		<div class="title"><%= fa_icon "bolt", class: "blue-2" %> <span>Quick</span></div>
-		<div class="blurb">It's probably not quick and doesn't sync but don't tell anyone, shhhhhh.</div>
+		<div class="blurb">It's probably not quick and doesn't sync fast but don't tell anyone, shhhhhh.</div>
 	</div>
 </section>
 
